Disable DropArea in flatpak

The droparea doesn't support flatpak and dropping something leads to a crash

BUG: 455990